Revert "fix height on mobile"
This reverts commit ff21b690a7934a4bf0bd9ea9b0e386ec863453a5.

--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ button:active {
 }
 
 .calculator {
-  height: 75vh;
+  height: 60vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -85,11 +85,6 @@ button:active {
   border-radius: 15px;
 }
 
-@media screen and (min-width: 425px) {
-  .calculator {
-    height: 50vh;
-  }
-}
 .row {
   flex: 1 0 auto;
 }
